# metis

./: .gitignore  CMakeLists.txt  README.md
cmake/generic/: antlr.cmake  artefacts.cmake  assets.cmake  cxx.cmake  eigen.cmake  get_cpm.cmake  nanobind.cmake  outputs.cmake  project.cmake  publish.cmake  python.cmake  sdl_3.cmake  sources.cmake  spv_glsllang_validator.cmake  uwebsockets.cmake  vcpkg.cmake
script/repo_version/: generate_git_version.py
script/version/: generate_git_version.py
setup/: requirements.py  set_up_git_hooks.py
src/repo_version/: CMakeLists.txt  git_version.cpp
src/version/: CMakeLists.txt
util/: bumpkins_package_zip.py  update_junc_tree.py
